# Glyph

./: .gitignore  README.md  fonts.json  fonts_index.json  fonts_index.json.br  generate.py  generate_fonts_data.py  generate_fonts_index.py  generate_google_fonts_index.py  google_fonts_index.json  io.github.shonebinu.Glyph.json  meson.build  requirements.txt
.github/workflows/: generate_fonts_data.yml  google_fonts.yml  update_fonts_index.yml  update_google_fonts_index.yml
data/: io.github.shonebinu.Glyph.desktop.in  io.github.shonebinu.Glyph.gschema.xml  io.github.shonebinu.Glyph.metainfo.xml.in  io.github.shonebinu.Glyph.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: filters.py  font-details-dialog.blp  font-row.blp  font_details_dialog.py  font_model.py  font_row.py  fonts-view.blp  fonts.py  fonts_manager.py  fonts_view.blp  fonts_view.py  glyph.gresource.xml  glyph.in  lipi.in  main.py  meson.build  sheet-view.blp  sheet_view.py  shortcuts-dialog.blp  sidebar.blp  sidebar.py  test-font.blp  test_font.py  window.blp  window.py  window.ui
